ravamp user, question and reply
