# src/dtos/users.dto.ts
@@ -17,12 +17,21 @@ export class CreateUserDto {
   public lastName: string;
 }
 
-
 export class AuthUser {
   @IsEmail()
   public email: string;
 
   @IsString()
   public password: string;
+}
 
+export class UpdateUserDto {
+  @IsString()
+  public firstName: string;
+
+  @IsString()
+  public username: string;
+
+  @IsString()
+  public lastName: string;
 }
